tests/pass/test_scope1.bb
float spike
float diff

spike = 7.9
diff = spike

if spike > 3.0
  float spike
  spike = 4.5
  diff = diff - spike
fin

say diff
